tests/good/syntax/061-case-8.clap
val x = 
  case { { First -> x , Tag } => x }

