tests/bad/lexical/061-case-8.clap
val x = 
  case { { first -> x , Tag } => x }
 
